# public/docs/openapi.yaml
@@ -503,7 +503,7 @@ paths:
         in: path
         name: id
         description: 'The ID of the application.'
-        example: 11
+        example: 2
         required: true
         schema:
           type: integer
@@ -991,7 +991,7 @@ paths:
         in: path
         name: regionId
         description: ''
-        example: quis
+        example: dolor
         required: true
         schema:
           type: string
@@ -1022,7 +1022,7 @@ paths:
         in: path
         name: provinceId
         description: ''
-        example: consectetur
+        example: assumenda
         required: true
         schema:
           type: string
@@ -1053,7 +1053,7 @@ paths:
         in: path
         name: regionId
         description: ''
-        example: inventore
+        example: voluptas
         required: true
         schema:
           type: string
@@ -1061,7 +1061,7 @@ paths:
         in: path
         name: provinceId
         description: ''
-        example: debitis
+        example: illo
         required: true
         schema:
           type: string
@@ -1092,7 +1092,7 @@ paths:
         in: path
         name: cityId
         description: ''
-        example: non
+        example: est
         required: true
         schema:
           type: string
@@ -1442,6 +1442,90 @@ paths:
         required: true
         schema:
           type: string
+  /api/categories:
+    get:
+      summary: "Display a listing of the Categories resource.\n\nThis endpoint retrieves a list of all categories."
+      operationId: displayAListingOfTheCategoriesResourceThisEndpointRetrievesAListOfAllCategories
+      description: ''
+      parameters: []
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  data:
+                    -
+                      id: 1
+                      name: 'Category Name'
+                      image: 'http://example.com/storage/category-image.jpg'
+                properties:
+                  data:
+                    type: array
+                    example:
+                      -
+                        id: 1
+                        name: 'Category Name'
+                        image: 'http://example.com/storage/category-image.jpg'
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                          example: 1
+                        name:
+                          type: string
+                          example: 'Category Name'
+                        image:
+                          type: string
+                          example: 'http://example.com/storage/category-image.jpg'
+      tags:
+        - Products
+      security: []
+  /api/brands:
+    get:
+      summary: "Display a listing of the Brand resource.\n\nThis endpoint retrieves a list of all brands."
+      operationId: displayAListingOfTheBrandResourceThisEndpointRetrievesAListOfAllBrands
+      description: ''
+      parameters: []
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  data:
+                    -
+                      id: 1
+                      name: 'Brand Name'
+                      image: 'http://example.com/storage/brand-image.jpg'
+                properties:
+                  data:
+                    type: array
+                    example:
+                      -
+                        id: 1
+                        name: 'Brand Name'
+                        image: 'http://example.com/storage/brand-image.jpg'
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                          example: 1
+                        name:
+                          type: string
+                          example: 'Brand Name'
+                        image:
+                          type: string
+                          example: 'http://example.com/storage/brand-image.jpg'
+      tags:
+        - Products
+      security: []
   /api/change-password:
     post:
       summary: "Change Password\n\nThis endpoint allows a user to change their password."
